python/test-data/testTypesProtos2.err
untypy.error.UntypyTypeError
Arguments do not match.
Hint: 'self'-parameter was omitted in declaration.

given:    '(<__wypp__.Dog object at 0x7fca96d507c0>, 3.14)'
expected: value of type makeSound(loadness: 'float') -> 'str'

context: makeSound(loadness: float) -> str
         
declared at: test-data/testTypesProtos2.py:8
  6 | class Animal(Protocol):
  7 |     @abc.abstractmethod
  8 >     def makeSound(loadness: float) -> str: # self parameter omitted!
  9 |         pass
 10 |

caused by: test-data/testTypesProtos2.py:17
 15 | 
 16 | def doSomething(a: Animal) -> None:
 17 >     print(a.makeSound(3.14))
 18 | 
 19 | doSomething(Dog())
